--- a/basic1.ipynb
+++ b/basic1.ipynb
@@ -4,10 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ML zoompcamp: MLE HW 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Set up the environment\n",
     "You need to install Python, NumPy, Pandas, Matplotlib and Seaborn. For that, you can the instructions from 06-environment.md.\n",
     "\n",
-    "Question 1\n",
+    "## Question 1\n",
     "What's the version of Pandas that you installed?\n",
     "\n",
     "You can get the version information using the __version__ field:"
@@ -556,34 +563,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "ans=np.matmul(X.T,X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[9.6820000e+03, 3.5105300e+05, 9.1357000e+04],\n",
-       "       [3.5105300e+05, 1.4399307e+07, 3.7720360e+06],\n",
-       "       [9.1357000e+04, 3.7720360e+06, 9.9835800e+05]])"
+       "((3, 3), (3, 3))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ans"
+    "import numpy as np\n",
+    "ans=np.matmul(X.T,X)\n",
+    "ans2 = X.T.dot(X)\n",
+    "ans.shape, ans2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[9.6820000e+03, 3.5105300e+05, 9.1357000e+04],\n",
+       "        [3.5105300e+05, 1.4399307e+07, 3.7720360e+06],\n",
+       "        [9.1357000e+04, 3.7720360e+06, 9.9835800e+05]]),\n",
+       " array([[9.6820000e+03, 3.5105300e+05, 9.1357000e+04],\n",
+       "        [3.5105300e+05, 1.4399307e+07, 3.7720360e+06],\n",
+       "        [9.1357000e+04, 3.7720360e+06, 9.9835800e+05]]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans,ans2"
    ]
   },
   {
@@ -606,10 +629,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w = ans_inv.dot(X.T) @ y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([23.12330961, -1.48124183,  5.69922946])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
   },
   {
    "cell_type": "code",
